--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.43.2.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
